<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- Shown only while attendance is switched on for this phone. -->
    <item
        android:id="@+id/action_attendance"
        android:icon="@drawable/ic_attendance"
        android:title="@string/att_menu"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_profile"
        android:title="@string/profile_menu"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_find_oem_recordings"
        android:title="@string/find_oem_recordings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/refresh"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />
</menu>
